--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-	"build": "webpack"
+    "build": "webpack"
   },
   "author": "Orly Knop",
   "dependencies": {
@@ -14,8 +14,9 @@
     "connect-mongo": "^1.3.2",
     "cookie": "^0.3.1",
     "express": "*",
+    "express-socket.io-session": "^1.3.2",
     "mongojs": "*",
-    "socket.io": "^1.7.2"	
+    "socket.io": "^1.7.2"
   },
   "engines": {
     "node": "4.6.0"
