--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-mongo": "^1.3.2",
     "cookie": "^0.3.1",
     "express": "*",
+	"express-session": "*",
     "express-socket.io-session": "^1.3.2",
     "mongojs": "*",
     "socket.io": "^1.7.2"
